# idk

./: .gitignore  README.md  data  index.html  tailwind.config.js
src/: App.css  App.tsx  index.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  database.rs  encryption.rs  error.rs  lib.rs  main.rs  util.rs
src/Component/DataSection/: DataSection.tsx
src/Component/DataSection/PreviewData/: PreviewData.tsx
src/Component/Login/: Login.tsx
src/Component/Logo/: Logo.tsx
src/Component/Save&Keep/: SaveKeep.tsx
src/Component/Switch_Theme/: Switch_Theme.tsx
src/Component/Titlebar/: TitleBar.css  TitleBar.tsx
src/utils/: Context.tsx  animation.ts  utils.ts
