cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "idk"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "idk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset", "image"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ring = "0.17.8"
#google-drive = "0.7.0"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
base64 = "0.22.1"
image = "0.24.9"
quircs = "0.10.2"
qrcode-generator = "4.1.9"
anyhow = "1.0.87"
thiserror = "1.0.63"
tempfile = "3.12.0"
parking_lot = "0.12.3"
tauri-plugin-os = "2.0.0-rc.0"
chrono = "0.4.38"
surrealdb-beta = { version = "*", features = ["kv-surrealkv"] }
brotli = "6.0.0"


[toolchain]
channel = "nightly"

[profile.dev]
opt-level = 0
debug = 1
#debug = false
#debug-assertions = false
overflow-checks = false
lto = "off"
panic = 'abort'
incremental = true
unwind-tables = false
codegen-units = 256
rpath = false
rustflags = [
    "-C",
    "link-arg=-fuse-ld=lld",
    "-Zshare-generics=y",
    "-Zthreads=8",
    "-Zcrate-attr=feature(optimize_attribute)",
    "-Zcrate-attr=optimize(speed)",
]
[profile.dev.package.'*']
compiler-flags = ["-Z pipelining", "-Z share-generics=y"]


[profile.release]
codegen-units = 1                            # Allows LLVM to perform better optimization.
lto = true                                   # Enables link-time-optimizations.
opt-level = "s"                              # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                              # Higher performance by disabling panic handlers.
strip = true                                 # Ensures debug symbols are removed.
trim-paths = "all"                           # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.

[profile.release.package."*"]
opt-level = 3
